add tomcat doc